Refactor tool scheme
