# api/swagger/gateway/v1/swagger.json
@@ -364,7 +364,7 @@
                     "example": "Банковская карта"
                 },
                 "tools": {
-                    "description": "Массив объектов, содержащих данные о сохраненных платежных инструментах",
+                    "description": "Массив объектов, содержащих данные о сохраненных платежных средствах",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/v1.tool"
@@ -431,8 +431,8 @@
                 },
                 "tool_id": {
                     "description": "Идентификатор сохраненного платежного средства",
-                    "type": "integer",
-                    "example": 1
+                    "type": "string",
+                    "example": "2dc32aa0-000f-5000-8000-16d7bc6cd09f"
                 },
                 "user_id": {
                     "description": "Идентификатор клиента",
@@ -571,8 +571,8 @@
                 },
                 "tool_id": {
                     "description": "Идентификатор сохраненного платежного средства",
-                    "type": "integer",
-                    "example": 1
+                    "type": "string",
+                    "example": "2dc32aa0-000f-5000-8000-16d7bc6cd09f"
                 },
                 "user_id": {
                     "description": "Идентификатор клиента",
@@ -626,16 +626,17 @@
             "required": [
                 "caption",
                 "id",
+                "name",
                 "type"
             ],
             "properties": {
                 "caption": {
-                    "description": "Значение платежного инструмента, например:\n* Маскированная банковская карта\n* Номер электронного кошелька\n* Адрес электронной почты\n* и т.д.",
+                    "description": "Значение платежного средства, например:\n* Маскированная банковская карта\n* Номер электронного кошелька\n* Адрес электронной почты\n* и т.д.",
                     "type": "string",
                     "example": "444444******4444"
                 },
                 "details": {
-                    "description": "Дополнительная информация о платежном инструменте",
+                    "description": "Дополнительная информация о платежном средстве",
                     "allOf": [
                         {
                             "$ref": "#/definitions/v1.toolDetails"
@@ -643,12 +644,17 @@
                     ]
                 },
                 "id": {
-                    "description": "Идентификатор платежного инструмента",
-                    "type": "integer",
-                    "example": 14124
+                    "description": "Идентификатор платежного средства",
+                    "type": "string",
+                    "example": "2dc32aa0-000f-5000-8000-16d7bc6cd09f"
+                },
+                "name": {
+                    "description": "Название платежного средства",
+                    "type": "string",
+                    "example": "Карта брата"
                 },
                 "type": {
-                    "description": "Тип платежного инструмента:\n* Банковская карта - \"card\"\n* Электронный кошелек - \"wallet\"",
+                    "description": "Тип платежного средства:\n* Банковская карта - \"card\"\n* Электронный кошелек - \"wallet\"",
                     "type": "string",
                     "example": "card"
                 }
